--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matsya",
+  "name": "blockchain-developer-bootcamp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
     "chai": "^4.3.6",
     "ethers": "^5.5.4",
     "hardhat": "^2.10.1"
