--- a/src/config.json
+++ b/src/config.json
@@ -13,8 +13,10 @@
             "address": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
         }
     },
-    "10" : {
-        
-    }
+
+    
+    "11155111": {
+        "explorerURL": "https://sepolia.etherscan.io/"
+      }
 }
 
